# alembic-deploy-action

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  integration.yml  release.yml  test.yml  validate-published.yml
examples/: basic.yml  multi-env.yml  production.yml
src/: alembic_ops.py  commands.py  config.py  constants.py  env.py  logger.py  machine.py  main.py  observers.py  safety.py  states.py
tests/: conftest.py
tests/test_app/: alembic.ini  models.py  pyproject.toml
tests/test_app/alembic/: env.py
tests/test_app/alembic/versions/: 001_initial_schema.py  002_add_posts_table.py  003_dangerous_migration.py
tests/unit/: test_commands.py  test_env.py  test_machine.py  test_observers.py  test_safety.py
